--- a/digitaltv.html
+++ b/digitaltv.html
@@ -35573,6 +35573,14 @@ http://iptvtree.net:8080/test_acct/ohbo1veifa4AhD/158801
 #EXTINF:-1 tvg-id="" tvg-name="TH: Zabb Channel" tvg-logo="http://s3.i3ns.net:2052/portal/picon/2023-12/b1b2c5cc0bebe058f8aacc2f6b95f262.png" group-title="Thailand",TH: Zabb Channel
 http://iptvtree.net:8080/test_acct/ohbo1veifa4AhD/158622
 
+#EXTINF:-1 tvg-id="Bein1" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png" group-title="ดูบอล",Bein1
+#EXTVLCOPT:http-referrer=https://warpdooball.net/
+https://cdn1.googlecdnforstreaming.live/live/bein3/chunks.m3u8?nimblesessionid=313910938&wmsAuth
+
+#EXTINF:-1 tvg-id="Bein4" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png" group-title="ดูบอล",Bein4
+#EXTVLCOPT:http-referrer=https://warpdooball.net/
+https://cdn1.googlecdnforstreaming.live/live/bein4/chunks.m3u8?nimblesessionid=313914875&wmsAuth
+
 
 
 
