--- a/mytv.html
+++ b/mytv.html
@@ -325,6 +325,14 @@ var channels = [
     license_type: "none",
     license_key: ""
   },
+    {
+    name: "ทดสอบ",
+    logo: "https://static.uflixtv.com/images/tv/channels_icons/epl-5.png", // เปลี่ยนเป็นโลโก้ของช่อง
+    group: "ช่องกีฬา",
+    source: "https://49-231-37-37-rewriter.ais-vidnt.com/ais/play/origin/live/eds/S0004/DASH/S0004.mpd",
+    license_type: "clearkey",
+    license_key: "cb419fa5f5498e2c6cbc39363248ddd7:b5853b51f2060025a822e62973154556"
+  },
 ];
 
 // สร้างปุ่มทุกช่องพร้อมโลโก้
