--- a/digitaltv.html
+++ b/digitaltv.html
@@ -35581,6 +35581,14 @@ https://cdn1.googlecdnforstreaming.live/live/bein3/chunks.m3u8?nimblesessionid=3
 #EXTVLCOPT:http-referrer=https://warpdooball.net/
 https://cdn1.googlecdnforstreaming.live/live/bein4/chunks.m3u8?nimblesessionid=313914875&wmsAuth
 
+#EXTINF:-1 tvg-id="Bein4" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png" group-title="ดูบอล",Bein4 Baygon
+#EXTVLCOPT:http-referrer=https://365liveball.com/
+https://r3-sn-5fo-c37ed15.googleuservideo.com/365liveball_m1/beinsporthd4_480p/chunks.m3u8?nimblesessionid=143091008&wmsAuthSign=c2VydmVyX3RpbWU9NS8xLzIwMjUgNDowMTo1OSBQTSZoYXNoX3ZhbHVlPTZ5MndPeVQ2WG5BUFlicDBTb21jNVE9PSZ2YWxpZG1pbnV0ZXM9MSZzdHJtX2xlbj0zMiZpZD1iZ2hyMTUzOTUz
+
+#EXTINF:-1 tvg-id="EPL1 Baygon" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png" group-title="ดูบอล",EPL1 Baygon
+#EXTVLCOPT:http-referrer=https://365liveball.com/
+https://r3-sn-5fo-c37ed15.googleuservideo.com/365liveball_m1/trueepl1_480p/chunks.m3u8?nimblesessionid=143090912&wmsAuthSign=c2VydmVyX3RpbWU9NS8xLzIwMjUgMzo1NzoyMyBQTSZoYXNoX3ZhbHVlPVpuZUFpTGErTlBUam5ycUZIakJ0Q0E9PSZ2YWxpZG1pbnV0ZXM9MSZzdHJtX2xlbj0yOCZpZD1iZ2hyOTU3NDA5
+
 
 
 
