--- a/digitaltv.html
+++ b/digitaltv.html
@@ -35573,6 +35573,26 @@ http://iptvtree.net:8080/test_acct/ohbo1veifa4AhD/158801
 #EXTINF:-1 tvg-id="" tvg-name="TH: Zabb Channel" tvg-logo="http://s3.i3ns.net:2052/portal/picon/2023-12/b1b2c5cc0bebe058f8aacc2f6b95f262.png" group-title="Thailand",TH: Zabb Channel
 http://iptvtree.net:8080/test_acct/ohbo1veifa4AhD/158622
 
+#EXTINF:-1 tvg-id="EPL1" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png" group-title="ดูบอล",EPL1
+#EXTVLCOPT:http-referrer=https://warpdooball.net/
+https://cdn1.googlecdnforstreaming.live/live/epl1_sd/chunks.m3u8?nimblesessionid=313910938&wmsAuth
+
+#EXTINF:-1 tvg-id="EPL2" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png" group-title="ดูบอล",EPL2
+#EXTVLCOPT:http-referrer=https://warpdooball.net/
+https://cdn1.googlecdnforstreaming.live/live/epl2_sd/chunks.m3u8?nimblesessionid=313910938&wmsAuth
+
+#EXTINF:-1 tvg-id="EPL3" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-3.png" group-title="ดูบอล",EPL3
+#EXTVLCOPT:http-referrer=https://warpdooball.net/
+https://cdn1.googlecdnforstreaming.live/live/epl3_sd/chunks.m3u8?nimblesessionid=313910938&wmsAuth
+
+#EXTINF:-1 tvg-id="EPL4" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-4.png" group-title="ดูบอล",EPL4
+#EXTVLCOPT:http-referrer=https://warpdooball.net/
+https://cdn1.googlecdnforstreaming.live/live/epl4_sd/chunks.m3u8?nimblesessionid=313910938&wmsAuth
+
+#EXTINF:-1 tvg-id="EPL5" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-5.png" group-title="ดูบอล",EPL5
+#EXTVLCOPT:http-referrer=https://warpdooball.net/
+https://cdn1.googlecdnforstreaming.live/live/epl5_sd/chunks.m3u8?nimblesessionid=313910938&wmsAuth
+
 #EXTINF:-1 tvg-id="Bein1" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png" group-title="ดูบอล",Bein1
 #EXTVLCOPT:http-referrer=https://warpdooball.net/
 https://cdn1.googlecdnforstreaming.live/live/bein3/chunks.m3u8?nimblesessionid=313910938&wmsAuth
