--- a/mytv.html
+++ b/mytv.html
@@ -245,6 +245,14 @@ var channels = [
     license_type: "clearkey",
     license_key: "f711e4d367ab4f0a8f8233e0fa3c18d9:8cbeefb2decc4abfbb0f2de5d95e8397"
   },
+  {
+    name: "GMM25",
+    logo: "https://i.postimg.cc/9F3j5vMS/1000013222-removebg-preview.png",
+    group: "ช่องทีวีดิจิตอล",
+    source: "https://cri-streamer3.cdn.3bbtv.com:8443/3bb/live/25/25.mpd",
+    license_type: "clearkey",
+    license_key: "f711e4d367ab4f0a8f8233e0fa3c18d9:8cbeefb2decc4abfbb0f2de5d95e8397"
+  },
     {
     name: "EPL1",
     logo: "https://static.uflixtv.com/images/tv/channels_icons/epl-1.png", // เปลี่ยนเป็นโลโก้ของช่อง
