--- a/on.html
+++ b/on.html
@@ -7,7 +7,7 @@
     {
         "name": "EPL 1",
         "image": "https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",
-        "url": "https://365liveball.com/channels-schedules?channel=epl1",
+        "url": "https://av-th.xyz/cdn/hls/7a48c29deca24d56783125d5bdc1095d/master.txt",
         "info": "365liveball",
         "referer": ""
       },
